add last sentence

--- a/_posts/2020-08-24-topik2-day1.markdown
+++ b/_posts/2020-08-24-topik2-day1.markdown
@@ -12,3 +12,5 @@ categories: [korean, 한국어]
 체육이 **집중력을** 위해 긍정적으로 **영향** 줬으면 좋겠다. 
 마지막에, 기분이 무거우면 공연 보고나 아이스크림 **택배를** **주문하면** 된다. 
 아이스크림이 **배송됄때** 내 **안색이** 다시 웃이 보일 것 같아.  
+
+이 글을 여기 까지 끝난다. **저장한** 다음에 친구의 버릇을 부탁 할 건다.  
