add french translation

--- a/_posts/2020-08-24-topik2-day1.markdown
+++ b/_posts/2020-08-24-topik2-day1.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Topik 2 day 1"
 categories: [korean, 한국어]
 ---
+# 한국어로 
 한국에 온지 10월 됬다. 
 서강대 어학당을 다니는 것이 아주 **효과가 있었는데**, 코로나 때문에 교실에 갈 수 없다. 
 나는 오느라이느 수업을 들으려고 아주 많이 **노력해도**, **제대로** 배울 수 없었다. 
@@ -14,3 +15,18 @@ categories: [korean, 한국어]
 아이스크림이 **배송됄때** 내 **안색이** 다시 웃이 보일 것 같아.  
 
 이 글을 여기 까지 끝난다. **저장한** 다음에 친구의 버릇을 부탁 할 건다.  
+
+# En français
+Ca fait 10 mois que je suis en Corée.
+L'apprentissage à Sogang était très efficace, mais à cause du Corona je ne peux plus aller en cours. 
+Je me suis donné du mal pour suivre les cours en ligne, mais je ne pouvais pas apprendre correctement. 
+Maintenant je dois mettre en place un changement positif. 
+L'autre jour j'ai lu le résultat d'un sondage, les gens conseillent de s'inscrire à une compétition pour renforcer sa motivation. 
+Et à partir de maintenant, je prévois de commencer à faire de l'exercie physique. 
+J'aimerais bien que l'exercice physique puisse influencer positivement ma concentration. 
+Enfin, si je suis démotivé, je peux aller voir un spectacle ou bien commander une livraison de glace à domicile. Lorsque je recevrai la livraison, j'aurai à nouveau une mine souriante. 
+
+J'ai fini ce texte. Je vais le sauvegarder et demander à mon amie si elle veut bien me corriger. 
+
+
+
