add corrections on topik day1

--- a/_posts/2020-08-24-topik2-day1.markdown
+++ b/_posts/2020-08-24-topik2-day1.markdown
@@ -6,15 +6,36 @@ categories: [korean, 한국어]
 # 한국어로 
 한국에 온지 10월 됬다. 
 서강대 어학당을 다니는 것이 아주 **효과가 있었는데**, 코로나 때문에 교실에 갈 수 없다. 
+
 나는 오느라이느 수업을 들으려고 아주 많이 **노력해도**, **제대로** 배울 수 없었다. 
+
 **당장** 나는 **긍정적인** **변화를** **실시해야 한다**.
 어느 날 **조사** 결과를 읽었는데, 동기가 **강화하려고** 사람들이 **대회에** **신청한다고** 조언한다. 
+
 그리고 도 이제 **체육을** 시작아는 걸 **예정** 했다. 
 체육이 **집중력을** 위해 긍정적으로 **영향** 줬으면 좋겠다. 
+
 마지막에, 기분이 무거우면 공연 보고나 아이스크림 **택배를** **주문하면** 된다. 
 아이스크림이 **배송됄때** 내 **안색이** 다시 웃이 보일 것 같아.  
 
 이 글을 여기 까지 끝난다. **저장한** 다음에 친구의 버릇을 부탁 할 건다.  
+
+# 친구의 교정  
+한국에 온지 10개월 됬다. 
+서강대 어학당을 다니는 것이 큰 **효과**가 있었는데, 코로나 때문에 수업에 갈 수 없다. 
+
+나는 온라인 수업을 들으려고 아주 많이 **노력**했지만, **제대로** 배울 수 없었다. 
+
+나는 **당장** **긍정적**인 **변화**를 시작해야 한다. 
+어느 날 연구 결과를 읽었는데, **강**한 동기 부여를 위해서 사람들이 **대회**를 **신청한**다고 한다. 
+
+그래서 나도 이제 운동을 시작하기로 했다. 
+운동이 내 공부의 **집중력** 향상에 **긍정적**인 **영향**을 줬으면 좋겠다. 
+
+기분이 안 좋으면 공연 보거나 아이스크림 **택배**를 **주문하**면 된다. 
+아이스크림을 **배송** 받은 내 얼굴엔 미소가 가득할 것이다. 
+
+이것으로 이글을 마친다. 저장한 다음, 친구에게 교정을 부탁할 것이다.
 
 # En français
 Ca fait 10 mois que je suis en Corée.
